compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__inline_variable_in_case_scope.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 5199
expression: "\nimport gleam/io\n\npub fn main(x) {\n  case x {\n    True -> {\n      let message = \"Hello!\"\n      io.println(message)\n    }\n    False -> Nil\n  }\n}\n"
snapshot_kind: text
---
----- BEFORE ACTION

import gleam/io

pub fn main(x) {
  case x {
    True -> {
      let message = "Hello!"
          ↑                 
      io.println(message)
    }
    False -> Nil
  }
}


----- AFTER ACTION

import gleam/io

pub fn main(x) {
  case x {
    True -> {
      io.println("Hello!")
    }
    False -> Nil
  }
}
