compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__pattern_match_on_argument_multi_item_tuple.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\npub fn main(tuple: #(Int, String, Bool)) {\n  todo\n}\n"
---
----- BEFORE ACTION

pub fn main(tuple: #(Int, String, Bool)) {
            ▔▔▔▔▔▔▔▔▔↑                    
  todo
}


----- AFTER ACTION

pub fn main(tuple: #(Int, String, Bool)) {
  let #(value_0, value_1, value_2) = tuple
  todo
}
