compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__pattern_match_on_argument_nicely_formats_code_when_used_on_function_with_empty_body.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "pub fn main(arg: #(Int, String)) {}"
---
----- BEFORE ACTION
pub fn main(arg: #(Int, String)) {}
            ↑                      


----- AFTER ACTION
pub fn main(arg: #(Int, String)) {
  let #(value_0, value_1) = arg
}
