compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__pattern_match_on_argument_preserves_indentation_of_statement_following_inserted_let.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "pub fn main(arg: #(Int, String)) {\n  todo\n//^^^^ This should still have two spaces of indentation!\n}"
---
----- BEFORE ACTION
pub fn main(arg: #(Int, String)) {
            ↑                     
  todo
//^^^^ This should still have two spaces of indentation!
}


----- AFTER ACTION
pub fn main(arg: #(Int, String)) {
  let #(value_0, value_1) = arg
  todo
//^^^^ This should still have two spaces of indentation!
}
