compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__pattern_match_on_let_assignment.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\npub fn main() {\n  let var = #(1, 2)\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  let var = #(1, 2)
      ↑            
}


----- AFTER ACTION

pub fn main() {
  let var = #(1, 2)
  let #(value_0, value_1) = var
}
